runtime/pavex_macros/tests/methods/fail/empty_impl.rs
use pavex_macros::methods;

pub struct A;

#[methods]
impl A {
}

fn main() {}